--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -10,3 +10,16 @@ spring.datasource.password=
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
+
+#server.servlet.encoding.charset=UTF-8
+#server.servlet.encoding.force=true
+#server.multipart.max-file-size=10MB
+#server.multipart.max-request-size=15MB
+
+#cloud.aws.region.static=ap-northeast-2
+#cloud.aws.credentials.access-key=??
+#cloud.aws.credentials.secret-key=??
+#cloud.aws.s3.bucket=damon-s3-dev
+#cloud.aws.s3.review-prefix=review/
+#cloud.aws.s3.community-prefix=community/
+#cloud.aws.stack.auto=false
